syntax = "proto3";

package gateway;

service Gateway {
    rpc AuthenticateUser(UserCredentials) returns (AuthResponse);
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
    rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
}

message UserCredentials {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
}

message SendMessageRequest {
    string sender = 1;
    string recipient = 2;
    string content = 3;
}

message SendMessageResponse {
    bool success = 1;
}

message GetMessagesRequest {
    string chat_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetMessagesResponse {
    repeated Message messages = 1;
}

message Message {
    string sender = 1;
    string content = 2;
    int64 timestamp = 3;
}
